feat(core): add instruments query endpoints
